# plantinhas_auth_lib

./: README.md  pyproject.toml
plantinhas_auth_lib/: apps.py  authenticators.py  backends.py  db_router.py
